schemars/tests/ui/repr_missing.stderr
warning: unused import: `std::time`
 --> src/json_schema_impls/time.rs
  |
  | use std::time;
  |     ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: JsonSchema_repr: missing #[repr(...)] attribute
 --> tests/ui/repr_missing.rs:3:10
  |
3 | #[derive(JsonSchema_repr)]
  |          ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `JsonSchema_repr` (in Nightly builds, run with -Z macro-backtrace for more info)
